--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <div class="info"></div>
     </div>
     <script type="text/javascript" src="/js/imgur.js"></script>
-    <script type="text/javascript" src="/js/upload.js"></script>
+    <script>
+    var feedback = function(res) {
+        if (res.success === true) {
+            var get_link = res.data.link.replace(/^http:\/\//i, 'https://');
+            document.querySelector('.status').classList.add('bg-success');
+            document.querySelector('.status').innerHTML = '<input class="image-url" value=\"' + get_link + '\"/>';
+        }
+    };
+    
+    new Imgur({
+        clientid: '4409588f10776f7',
+        callback: feedback
+    });
+    </script>
 </body>
 
 </html>
