--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <title>Imgur-Upload</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/style.css" rel="stylesheet" media="screen">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="./css/style.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="./favicon.ico">
 </head>
 
 <body>
     <div class="dropzone">
         <div class="info"></div>
     </div>
-    <script type="text/javascript" src="/js/imgur.js"></script>
+    <script type="text/javascript" src="./js/imgur.js"></script>
     <script>
     var feedback = function(res) {
         if (res.success === true) {
